# lua_for_zephyr

./: README.md
common/lua/port/: port.c
hello_world/: CMakeLists.txt  README.rst  prj.conf
hello_world/lua/: CMakeLists.txt
lua/: CMakeLists.txt
run_script_file/: CMakeLists.txt  README.rst
run_script_file/boards/: csk6011a_nano.overlay
samples/hello_world/: CMakeLists.txt
samples/hello_world/src/: main.c
samples/run_script_file/: CMakeLists.txt  prj.conf  script.fs
samples/run_script_file/script/: main.lua
samples/run_script_file/src/: main.c
samples/run_script_flash/: CMakeLists.txt  README.rst  prj.conf
samples/run_script_flash/script/: main.lua
samples/run_script_flash/src/: main.c
